# python-project-52

./: .env_example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_created_at.py
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_created_at.py
task_manager/tasks/: filters.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_rename_labels_task_label.py  0004_alter_task_created_at.py  0005_alter_task_status.py  0006_alter_task_executor.py  0007_alter_task_description.py  0008_rename_label_task_labels.py
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  (+1 more)
templates/: base.html  create_form.html  login.html
templates/labels/: create_label.html  delete_label.html  labels_list.html
templates/statuses/: status_delete.html  statuses_list.html
templates/tasks/: create_task.html  task.html  task_delete.html  task_update.html  tasks_list.html
templates/users/: user_create.html  user_delete.html  user_form.html  users_list.html
