[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Mirdalan <mirdalan.p@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
django = "^4.2"
django-bootstrap = "^0.2.4"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
