[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Mirdalan <mirdalan.p@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
django = "^4.2"
django-bootstrap4 = "^22.3"
python-dotenv = "^1.0.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.6"
django-filter = "^23.2"
rollbar = "^0.16.3"
coverage = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
